# cheetah

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  MANIFEST.in  Package.swift  README.md  __init__.py  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.md  documentation.yml  feature_request.md  feature_request.yml
.github/workflows/: android-appcenter.yml  android-browserstack.yml  android-demos.yml  android-devicefarm.yml  android-perf.yml  android-upload.yml  c-codestyle.yml  c-demos.yaml  c-demos.yml  dotnet-codestyle.yml  dotnet-demos.yml  dotnet.yml  flutrter-codestyle.yml  flutter-codestyle.yml  flutter-demos.yml  flutter.yml  go-codestyle.yml  go-demos.yml  go.yml  ios-appcenter.yml  ios-browserstack.yml  ios-demos.yml  ios-devicefarm.yml  ios-perf.yml  ios-validate.yml  java-codestyle.yml  java-demos.yml  java-perf.yml  java.yml  link-check.yml  nodejs-codestyle.yml  nodejs-demos.yml  nodejs-perf.yml  nodejs.yml  python-codestyle.yml  python-demos.yml  python-perf.yml  python-train.yml  python.yml  react-codestyle.yml  (+16 more)
binding/android/: .gitignore  README.md  build.gradle  settings.gradle
binding/dotnet/: .gitignore  Cheetah.sln  README.md
binding/flutter/: CHANGELOG.md  README.md  pubspec.yaml
binding/go/: README.md  cheetah.go  cheetah_native.go  cheetah_posix.go  cheetah_test.go  copy.sh  (+5 more)
binding/rust/: Cargo.toml  README.md  build.rs  copy.sh
binding/rust/src/: cheetah.rs  lib.rs  util.rs
binding/rust/tests/: cheetah_tests.rs
include/: picovoice.h  pv_cheetah.h
(+439 files in other folders)
